--- a/app/src/main/res/layout/game_helper_bottom.xml
+++ b/app/src/main/res/layout/game_helper_bottom.xml
@@ -12,10 +12,11 @@
             android:id="@+id/btnGetHint"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:layout_marginStart="32dp"
             android:background="@drawable/shape_game_helper_active"
             android:padding="10dp"
             android:src="@drawable/hand_point_up_solid"
-            app:layout_constraintEnd_toStartOf="@+id/btnCursor"
+            app:layout_constraintEnd_toStartOf="@+id/btnRobot"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -24,38 +25,48 @@
             android:id="@+id/btnCursor"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="16dp"
             android:background="@drawable/shape_game_helper_active"
             android:padding="10dp"
             android:src="@drawable/arrows_turn_to_dots_solid"
-            app:layout_constraintEnd_toStartOf="@+id/btnRobot"
+            app:layout_constraintEnd_toStartOf="@+id/btnNinja"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btnGetHint"
-            app:layout_constraintTop_toTopOf="@+id/btnGetHint" />
+            app:layout_constraintStart_toEndOf="@+id/btnHammer"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnHammer"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/shape_game_helper_active"
+            android:padding="10dp"
+            android:src="@drawable/hammer_solid"
+            app:layout_constraintEnd_toStartOf="@+id/btnCursor"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/btnRobot"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/btnRobot"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="16dp"
             android:background="@drawable/shape_game_helper_active"
             android:padding="10dp"
             android:src="@drawable/robot_solid"
-            app:layout_constraintEnd_toStartOf="@+id/btnNinja"
+            app:layout_constraintEnd_toStartOf="@+id/btnHammer"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btnCursor"
-            app:layout_constraintTop_toTopOf="@+id/btnCursor" />
+            app:layout_constraintStart_toEndOf="@+id/btnGetHint"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/btnNinja"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="32dp"
             android:background="@drawable/shape_game_helper_active"
             android:padding="10dp"
             android:src="@drawable/user_ninja_solid"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btnRobot"
+            app:layout_constraintStart_toEndOf="@+id/btnCursor"
             app:layout_constraintTop_toTopOf="@+id/btnRobot" />
 </androidx.constraintlayout.widget.ConstraintLayout>
