--- a/app/src/main/res/layout/dialog_menu_online.xml
+++ b/app/src/main/res/layout/dialog_menu_online.xml
@@ -32,7 +32,8 @@
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container2"
