--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -109,8 +109,8 @@
         <Button
             android:id="@+id/btnItemEdit"
             style="@style/Widget.Material3.Button.IconButton.Outlined"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginTop="16dp"
             app:icon="@drawable/pen_to_square_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnItemDelete"
@@ -121,9 +121,9 @@
         <Button
             android:id="@+id/btnItemDelete"
             style="@style/Widget.Material3.Button.IconButton.Outlined"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/trash_solid"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:icon="@drawable/trash_can_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnShareAsQR"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btnItemEdit"
@@ -132,9 +132,9 @@
         <Button
             android:id="@+id/btnShareAsQR"
             style="@style/Widget.Material3.Button.IconButton.Outlined"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/square_share_nodes_solid"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:icon="@drawable/share_nodes_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnUpload"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btnItemDelete"
@@ -143,9 +143,9 @@
         <Button
             android:id="@+id/btnUpload"
             style="@style/Widget.Material3.Button.IconButton.Outlined"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/cloud_arrow_up_solid"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:icon="@drawable/upload_solid"
             app:layout_constraintEnd_toStartOf="@+id/swPublish"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btnShareAsQR"
@@ -156,10 +156,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:background="@drawable/shape_list_item_text"
+            android:background="@drawable/shape_koin"
             android:gravity="center"
-            android:paddingHorizontal="5dp"
+            android:padding="10sp"
             android:text="Switch"
+            android:textColor="@color/button"
             app:layout_constraintBottom_toBottomOf="@+id/btnUpload"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
