--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -77,6 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/container1"
         >
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcViewQuestioner"
             android:layout_width="0dp"
@@ -89,6 +90,17 @@
             app:layout_constraintTop_toTopOf="parent">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <include
+            android:id="@+id/loading"
+            layout="@layout/component_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/rcViewQuestioner"
+            app:layout_constraintVertical_bias="0.27" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
