--- a/app/src/main/res/layout/game_helper_bottom.xml
+++ b/app/src/main/res/layout/game_helper_bottom.xml
@@ -14,7 +14,12 @@
             android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:background="@drawable/shape_game_helper_active"
-            android:padding="10dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp"
             android:src="@drawable/hand_point_up_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnRobot"
             app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +43,12 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/shape_game_helper_active"
-            android:padding="10dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp"
             android:src="@drawable/hammer_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnCursor"
             app:layout_constraintHorizontal_bias="0.5"
@@ -50,7 +60,12 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/shape_game_helper_active"
-            android:padding="10dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp"
             android:src="@drawable/robot_solid"
             app:layout_constraintEnd_toStartOf="@+id/btnHammer"
             app:layout_constraintHorizontal_bias="0.5"
@@ -69,4 +84,38 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btnCursor"
             app:layout_constraintTop_toTopOf="@+id/btnRobot" />
+
+        <TextView
+            android:id="@+id/btnHintLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/acme"
+            android:text="0"
+            android:textColor="@color/button"
+            app:layout_constraintBottom_toBottomOf="@+id/btnGetHint"
+            app:layout_constraintEnd_toEndOf="@+id/btnGetHint"
+            app:layout_constraintStart_toStartOf="@+id/btnGetHint" />
+
+        <TextView
+            android:id="@+id/btnRobotLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/acme"
+            android:text="50"
+            android:textColor="@color/button"
+            app:layout_constraintBottom_toBottomOf="@+id/btnRobot"
+            app:layout_constraintEnd_toEndOf="@+id/btnRobot"
+            app:layout_constraintStart_toStartOf="@+id/btnRobot" />
+
+        <TextView
+            android:id="@+id/btnHammerLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:fontFamily="@font/acme"
+            android:text="70"
+            android:textColor="@color/button"
+            app:layout_constraintBottom_toBottomOf="@+id/btnHammer"
+            app:layout_constraintEnd_toEndOf="@+id/btnHammer"
+            app:layout_constraintStart_toStartOf="@+id/btnHammer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
